Update Day 1 class notes with Github Desktop install for Assignment

--- a/bna/2019/day/1.md
+++ b/bna/2019/day/1.md
@@ -70,7 +70,7 @@ If you're new(ish) to programming and web development, some of this work could t
 
 * Install [VSCode](https://code.visualstudio.com/) (if you don’t already have a code editor)
 * Sign up for Slack and join our channel (*comm177t-news-apps*)
-* Create a [Github account](https://github.com/) and [install git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git)
+* Create a [Github account](https://github.com/) and [Github Desktop](https://desktop.github.com/) and [git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git) 
 * Sign up for an [AWS account](https://aws.amazon.com/) and install the [AWS command-line tools](https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html)
 * If you're new to git and version control, skim the [Git Handbook](https://guides.github.com/introduction/git-handbook/)
 
