--- a/bna/2019/day/2.md
+++ b/bna/2019/day/2.md
@@ -145,5 +145,5 @@ If you're new to web development or need to refresh your knowledge of the pictur
 * [How the Internet Works](https://developer.mozilla.org/en-US/docs/Learn/Common_questions/How_does_the_Internet_work)
 * [How the Web Works](https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/How_the_Web_works)
 
-[Create a Static Website]: https://data-driven/how-to/create-a-static-website/
+[Create a Static Website]: https://data-driven.news/how-to/create-a-static-website/
 [Adding a Custom Domain and HTTPS]: https://data-driven.news/how-to/add-custom-domain-and-https/
