Fix quote marks

--- a/bna/2019/day/2.md
+++ b/bna/2019/day/2.md
@@ -21,7 +21,7 @@ Let's review thoughts on features of [ICIJ Implant Files database](https://medic
 
 ## Version control overview
 
-> "What is “version control”, and why should you care? Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. For the examples in [this book][], you will use software source code as the files being version controlled, though in reality you can do this with nearly any type of file on a computer." ~ [Pro Git]
+> "What is 'version control', and why should you care? Version control is a system that records changes to a file or set of files over time so that you can recall specific versions later. For the examples in [this book][], you will use software source code as the files being version controlled, though in reality you can do this with nearly any type of file on a computer." ~ [Pro Git]
 
 Using version control along with a code-sharing platform such as Github has numerous benefits for software and journalism. Among other things, it:
 
