--- a/bna/2019/day/3.md
+++ b/bna/2019/day/3.md
@@ -21,7 +21,7 @@ In a similar vein, news app developers just starting out often work in ad hoc, "
 
 This is not to say we're prepared for every situation. News breaks in unexpected ways and the tools and strategies called for on one day will differ from those required on another. A critical role for the news app developer is to identify patterns in the constant thrash of breaking news, and strive to build tools to help streamline similar situations in the future. If reporters in your newsroom deal with large document dumps on a regular basis, perhaps you need a custom app to sift through and [make sense of documents][]. If your organization frequently hand-keys data from government documents, it may be worth leveling up on a web framework that lets you easily build [custom data admins][].
 
-[make sense of documents]: [https://www.nytimes.com/2019/03/26/reader-center/times-documents-reporters-cohen.html]
+[make sense of documents]: https://www.nytimes.com/2019/03/26/reader-center/times-documents-reporters-cohen.html
 [custom data admins]: https://docs.djangoproject.com/en/2.2/ref/contrib/admin/
 
 To work at the speed of news, developers automate common workflows and build tools to help simplify the work of their newsroom colleagues. Here are a few examples of automation from the news industry: 
