--- a/bna/2019/day/4.md
+++ b/bna/2019/day/4.md
@@ -13,7 +13,7 @@ coursedate: "April 11, 2019"
 [Youyou Zhou]: https://qz.com/author/yzhouqz/
 [award-winning project]: https://www.ire.org/archives/36072
 
-## Collaborative Design
+## Website Design
 
 ### Overview
 
@@ -21,7 +21,7 @@ Web design is a big topic, one that has entire [classes][] and [books][] devoted
 
 For our class, we'll keep things simple and create hand-drawn sketches -- yes, on paper! -- in the spirt of ths [admittedly opinionated strategy][]. The goal is to focus on a basic sketch and then begin implementing the sketch using HTML & CSS. This process may require multiple rounds of sketch updates and implementation as we refine our ideas.
 
-Keep in mind that the overarching goal for our class is to create a personal portfolio site. When designing the site, try to put yourself in the shoes of a potential employer or colleague hoping to learn more about you and your work. Do you want to showcase your work by putting screengrabs of your projects front and center on the home page? Or perhaps you want to make a stylistic statement, and point users to a projects page that lists all your work? 
+Keep in mind that the overarching goal for our class is to create a personal portfolio site. When designing the site, try to put yourself in the shoes of a potential employer or colleague hoping to learn more about you and your work. Do you want to showcase your work by putting screengrabs of your projects front and center on the home page? Or perhaps you want to make a stylistic statement on the home page, and point users to a projects page that lists all your work? 
 
 Get creative, but remember that you must also *implement* this design, so it's not a bad idea to start simple. If you need inspiration, feel free to poke around the Internet for portfolio site examples.
 
@@ -40,9 +40,9 @@ As part of this assignment, we'll begin learning how to use a [Github project bo
 
 ## Assignment 5
 
-### Leveling up on HTML/CSS
+### Level up on HTML/CSS
 
-Read and work through chapters 1-5 of [Learn to Code HTML & CSS][]. Even if you feel comfortable with HTML & CSS, you should at least skim through this material, as we'll be applying page layout and styling strategies from this book (e.g. a CSS reset file). 
+Read and work through chapters 1-5 of [Learn to Code HTML & CSS][]. Even if you feel comfortable with HTML & CSS, you should skim through this material as we'll be applying page layout and styling strategies from this book (e.g. a CSS reset file). 
 
 ### Design sketches
 
@@ -52,7 +52,7 @@ For this portion of the assignment, create 3-4 hand-drawn sketches *for desktop 
 Here are the precise requirements for the assignment:
 
 * Pair up with one person in class to serve as an "end user" for feedback.
-* Create a [Github project board][] with columns for `To Do`, `In Progress` and `Done`.
+* Create a [Github project board][] for your website repo and add columns for `To Do`, `In Progress` and `Done`.
 * On the project board, create tickets in the `To Do` column for each of the pages. As you work on and complete each ticket, move it to the appropriate column in the project board. **An image of the sketch must be attached to the ticket for each page.**
 * Draw sketches on paper for the following pages:
   > All pages must include a header, content section and site navigation.
