More day 4 tweaks

--- a/bna/2019/day/4.md
+++ b/bna/2019/day/4.md
@@ -19,15 +19,15 @@ coursedate: "April 11, 2019"
 
 Web design is a big topic, one that has entire [classes][] and [books][] devoted to it. Professional designers use a wide range of strategies to design sites, including [wireframes][] and pixel-perfect [mockups][]. There are many tools used in the process, from [wireframe software][] to full-featured design suites such as Adobe Illustrator and Photoshop. 
 
-For our class, we'll keep things simple and create hand-drawn sketches -- yes, on paper! -- in the spirt of ths [admittedly opinionated strategy][]. The goal is to focus on a basic sketch and then begin implementing the sketch using HTML & CSS. This process may require multiple rounds of sketch updates and implementation as we refine our ideas.
+For our class, we'll keep things simple and create hand-drawn sketches -- yes, on paper! -- in the spirt of this [admittedly opinionated strategy][]. The goal is to focus on a basic sketch and then begin implementing the sketch using HTML & CSS. This process may require multiple rounds of sketch updates and implementation as we refine our ideas.
 
-Keep in mind that the overarching goal for our class is to create a personal portfolio site. When designing the site, try to put yourself in the shoes of a potential employer or colleague hoping to learn more about you and your work. Do you want to showcase your work by putting screengrabs of your projects front and center on the home page? Or perhaps you want to make a stylistic statement on the home page, and point users to a projects page that lists all your work? 
+Keep in mind that the overarching goal for our class is to create a personal portfolio site showcasing your projects. When designing the site, try to put yourself in the shoes of a potential employer or colleague hoping to learn more about you and your work. Do you want to highlight your work by putting screengrabs of projects front and center on the home page? Or perhaps you want to make a stylistic statement on the home page, and point users to a projects page that lists all your work? 
 
 Get creative, but remember that you must also *implement* this design, so it's not a bad idea to start simple. If you need inspiration, feel free to poke around the Internet for portfolio site examples.
 
 ### Collaborative Design
 
-As part of this assignment, we'll begin learning how to use a [Github project board][] to collaboratively plan and track work. Each person must pick a partner to serve as an "end user" to provide feedback on their design. You can have these conversations in person, on Slack, or in comments on Github tickets (the latter will require adding the person as a collaborator on your repo).
+As part of this assignment, we'll begin learning how to use a [Github project board][] to collaboratively plan and track work. Each person must pick a partner to serve as an "end user" to provide feedback on their design. You can have these conversations in person, on Slack, or in comments on Github tickets -- or all of the above. If you use Github, you must add the person as a collaborator on your repo.
 
 [classes]: https://resources.journalismdesign.com/syllabi
 [books]: https://designforhackers.com/blog/best-web-design-books/
@@ -55,7 +55,7 @@ Here are the precise requirements for the assignment:
 * Create a [Github project board][] for your website repo and add columns for `To Do`, `In Progress` and `Done`.
 * On the project board, create tickets in the `To Do` column for each of the pages. As you work on and complete each ticket, move it to the appropriate column in the project board. **An image of the sketch must be attached to the ticket for each page.**
 * Draw sketches on paper for the following pages:
-  > All pages must include a header, content section and site navigation.
+  > All pages must include a header with site navigation and a content section.
   * `Home` - The entry point into your site, including site navigation.
   * `Project detail` - A project "detail" page that should include a brief narrative describing the project, an image of the project, and a link to its site.
   * `Projects list` (optional) - If you decide not to list projects on the home page, you can add an extra page to serve as an index page for projects.
