--- a/bna/2019/day/4.md
+++ b/bna/2019/day/4.md
@@ -19,7 +19,7 @@ coursedate: "April 11, 2019"
 
 Web design is a big topic, one that has entire [classes][] and [books][] devoted to it. Professional designers use a wide range of strategies to design sites, including [wireframes][] and pixel-perfect [mockups][]. There are many tools used in the process, from [wireframe software][] to full-featured design suites such as Adobe Illustrator and Photoshop. 
 
-For our class, we'll keep things simple and create hand-drawn sketches -- yes, on paper! -- in the spirt of this [admittedly opinionated strategy][]. The goal is to focus on a basic sketch and then begin implementing the sketch using HTML & CSS. This process may require multiple rounds of sketch updates and implementation as we refine our ideas.
+For our class, we'll keep things simple and create hand-drawn sketches -- yes, on paper! -- in the spirit of this [admittedly opinionated strategy][]. The goal is to focus on a basic sketch and then begin implementing the sketch using HTML & CSS. This process may require multiple rounds of sketch updates and implementation as we refine our ideas.
 
 Keep in mind that the overarching goal for our class is to create a personal portfolio site showcasing your projects. When designing the site, try to put yourself in the shoes of a potential employer or colleague hoping to learn more about you and your work. Do you want to highlight your work by putting screengrabs of projects front and center on the home page? Or perhaps you want to make a stylistic statement on the home page, and point users to a projects page that lists all your work? 
 
