--- a/bna/2019/day/5.md
+++ b/bna/2019/day/5.md
@@ -19,7 +19,7 @@ After presentations, we'll begin implementing our designs as part of Project 1.
 
 [Github project board]: https://help.github.com/en/articles/about-project-boards
 
-## Project 1
+## Project 1 - Building a website
 
 For this project, we'll implement our website design using HTML & CSS. 
 
