Tweak project 1 description

--- a/bna/2019/day/5.md
+++ b/bna/2019/day/5.md
@@ -21,7 +21,7 @@ After presentations, we'll begin implementing our designs as part of Project 1.
 
 ## Project 1 - Building a website
 
-For this project, we'll implement our website design using HTML & CSS. 
+For this project, we'll implement the Home and About pages of our website design using HTML & CSS. It's fine to hold off on implementing the project detail page until we complete our first interactive graphic. If you choose to implement the project detail now, you can use a placeholder image and lorem ipsum for the text.
 
 > To complete the assignment, the changes must be deployed to your site and the URL for the site uploaded via Canvas by class time on Tuesday April 23rd.
 
