Add basic index page for class notes. Closes #5

--- a/bna/2019/day/2.md
+++ b/bna/2019/day/2.md
@@ -4,6 +4,8 @@ date: 2019-04-04
 title: Version Control and Static Site Bootstrap
 daynum: 2
 coursedate: "April 4, 2019"
+tags:
+  - classnotes
 ---
 
 ## Overview
