--- a/bna/2019/day/3.md
+++ b/bna/2019/day/3.md
@@ -4,6 +4,8 @@ date: 2019-04-09
 title: Working at the Speed of News
 daynum: 3
 coursedate: "April 9, 2019"
+tags:
+  - classnotes
 ---
 
 ## Overview
