--- a/bna/2019/day/4.md
+++ b/bna/2019/day/4.md
@@ -4,6 +4,8 @@ date: 2019-04-11
 title: Hurricane Maria's Dead guest lecture & Website Design
 daynum: 4
 coursedate: "April 11, 2019"
+tags:
+  - classnotes
 ---
 
 ## Guest lecture
