--- a/bna/2019/day/5.md
+++ b/bna/2019/day/5.md
@@ -4,6 +4,8 @@ date: 2019-04-16
 title: Website Design Presentations
 daynum: 5
 coursedate: "April 16, 2019"
+tags:
+  - classnotes
 ---
 
 ## Website Design Review
