--- a/bna/2019/day/1.md
+++ b/bna/2019/day/1.md
@@ -4,6 +4,8 @@ date: 2019-04-02
 title: Course Intro
 daynum: 1
 coursedate: "April 2, 2019"
+tags:
+  - classnotes
 ---
 
 ## Do you trust the news?
