--- a/bna/2019/day/6.md
+++ b/bna/2019/day/6.md
@@ -4,6 +4,8 @@ date: 2019-04-18
 title: Website Coding Workshop
 daynum: 6
 coursedate: "April 18, 2019"
+tags:
+  - classnotes
 ---
 
 ## Collaborative Coding
