Add syntax highlighting #14

--- a/bna/2019/day/1.md
+++ b/bna/2019/day/1.md
@@ -12,9 +12,9 @@ tags:
 
 Let's kick off the day with a few rounds of questions:
 
-1. What factors have chipped away at trust in the news?
-1. What factors make you trust the news?
-1. What could be done differently to improve trust in the news?
+* What factors have chipped away at trust in the news?
+* What factors make you trust the news?
+* What could be done differently to improve trust in the news?
 
 For each round, grab 2-3 Post-its and throw your thoughts on the whiteboard.
 
