--- a/bna/2019/day/2.md
+++ b/bna/2019/day/2.md
@@ -59,7 +59,7 @@ In the Github Desktop client:
 
 Go to the command line and create a test file in the new repository:
 
-```
+```bash
 cd /path/to/Comm177T-2019
 echo "hello world" > testfile.txt
 ```
@@ -76,7 +76,7 @@ Let's save the new file by going to the lower left panel of the client and click
 
 Let's add another line to our file. You can do this on the command line, as below, or by simply opening/editing the file in a text editor.
 
-```
+```bash
 echo "Coding is somewhat fun." >> testfile.txt
 ```
 
