--- a/bna/2019/day/3.md
+++ b/bna/2019/day/3.md
@@ -65,12 +65,12 @@ Some preliminary installs and setup:
 * [Install and configure][] the AWS CLI. If you run into trouble, see these [instructions](https://docs.aws.amazon.com/cli/latest/userguide/install-macos.html#awscli-install-osx-path).
 * Install [Pipenv][]: `pip3 install pipenv`
 * Install [invoke][] (a Python command-line framework):
-  ```
+  ```bash
   cd /path/to/<comm177t-code-repo>
   pipenv install invoke
   ```
 * Create a directory to hold your site pages:
-  ```
+  ```bash
   mkdir _site/
   ```
 * Add the basic "hello world" *index.html* page to the `_site/` directory (e.g. the *index.html* we created and uploaded in [Create a Static Website](/how-to/create-a-static-website/)).
@@ -87,9 +87,8 @@ For example, we can use the AWS [Certificate Manager interface][] to manage SSL 
 [Certificate Manager interface]: https://docs.aws.amazon.com/cli/latest/reference/acm/index.html
 [Adding a Custom Domain and HTTPS to Your Website]: /how-to/add-custom-domain-and-https/
 
-```
+```bash
 aws acm --profile stanford list-certificates
-CERTIFICATESUMMARYLIST	arn:aws:acm:us-east-1:542503701485:certificate/4f0be0a4-e3c4-4e31-8798-0bf560d4ca38	data-driven.news
 ```
 
 For this exercise, we'll learn how to deploy our website pages and ensure that stale versions of files are cleared from the web. As with any technology, part of the learning curve involves learning how to read technical documentation.
@@ -124,7 +123,8 @@ Here are the requirements for the commands:
 
 In order to run these commands, you must "activate" the virtual environment for the repo. This environment was created automatically when you ran `pipenv install invoke`.
 
-```
+```bash
+
 cd /path/to/<comm177t-code-repo>
 
 # Activate the environment
