Fix code example for Day 7

--- a/bna/2019/day/7.md
+++ b/bna/2019/day/7.md
@@ -30,7 +30,7 @@ Below are some basic Python examples that demonstrate the technique using earthq
 
 ```python
 location = '118km W of Cantwell, Alaska'
-magnitude	= '1.7'
+magnitude = '1.7'
 date = 'April 2, 2019'
 time = '4:30am Alaskan Standard Time'
 ```
@@ -72,10 +72,10 @@ Libraries such as [Jinja2][] allow you to not only merge data with a template, b
 
 ```python
 from jinja2 import Template
-template = """{% raw %}A {% if magnitude|int < 5 %}small{% else %}large{% endif %} 
+template = Template("""{% raw %}A {% if magnitude|int < 5 %}small{% else %}large{% endif %}
 magnitude {{ magnitude }} earthquake occured {{ location }} 
 on {{ date }} at {{ time}}.{% endraw %}
-"""
+""")
 template.render(magnitude=magnitude, location=location, date=date, time=time)
 ```
 
