Fix spelling and line breaks

--- a/bna/2019/day/1.md
+++ b/bna/2019/day/1.md
@@ -26,7 +26,7 @@ Early news apps typically involved a dynamic, database-backed web application wi
 
 The advent of web frameworks such as [Django](https://www.djangoproject.com/) and [Rails](https://rubyonrails.org/) sped up this trend. Newsrooms realized they could easily provide public access to databases traditionally used for in-house research and analysis.
 
-The more ambitious added visual components and auto-generated narrative alongside the data; the less ambitious provided little more than a thin veneer over raw public databases. Think mugshots or government employee salaries. These latter "apps", devoid of any narrative or visual storytelling elements, came to be know as the dreaded "database ghetto": designed as little more than an opportunity for voyeurism and generating page views.
+The more ambitious added visual components and auto-generated narrative alongside the data; the less ambitious provided little more than a thin veneer over raw public databases. Think mugshots or government employee salaries. These latter "apps", devoid of any narrative or visual storytelling elements, came to be known as the dreaded "database ghetto": designed as little more than an opportunity for voyeurism and generating page views.
 
 Fortunately, the landscape has evolved since those early days. Newsrooms are spending more time thinking about how to engage the public and even [enlist them](https://www.theguardian.com/news/datablog/2009/jun/18/mps-expenses-houseofcommons) in the news process. They're building [storybots](https://source.opennews.org/articles/how-break-news-while-you-sleep/) to speed up the responsiveness of news, and using [interactive games](https://projects.propublica.org/asylum/) and [AR/VR](https://docs.google.com/presentation/d/1-F_eyqTcKhXb6k2f3KzcwA_Wmy2QQkq39v5cUXTLTr8/present#slide=id.g356b11cd76_0_0) to provide new story experiences.
 
