--- a/bna/2019/day/6.md
+++ b/bna/2019/day/6.md
@@ -10,8 +10,7 @@ tags:
 
 ## Collaborative Coding
 
-Today we'll wrap up presentations of our website sketches (assignment 5) and begin hands-on work
-implementing our designs (Project 1).
+Today we'll wrap up presentations of our website sketches (assignment 5) and begin hands-on work implementing our designs (Project 1).
 
 This is an opportunity to collaborate and help each other, so please reach out to me or your fellow classmates if you hit snags as you begin coding the HTML and CSS.
 
