--- a/bna/2019/day/11.md
+++ b/bna/2019/day/11.md
@@ -38,4 +38,4 @@ Each group will be assigned one of the below data sets:
 
 ## Assignment 8
 
-Complete the in-class assignment with your partner and be prepared to present your story questions and related data visualization sketches on Thursday May 9th.
+Complete the in-class assignment with your partner and be prepared to present your story questions and related data visualization sketches on Thursday May 9th. Partners should collaboratively discuss the story ideas, select visualization types, etc., but you should divide the task of sketching and presentation (so that each person has a chance to sketch and present one visualization).
