Tweak Day 11 exercise

--- a/bna/2019/day/11.md
+++ b/bna/2019/day/11.md
@@ -30,7 +30,7 @@ Each group will be assigned one of the below data sets:
 
 * [Campaign Finance data][] - Use the data viewable on the linked web page (as opposed to drilling down into the individual filings or downloading filing data)
 * [Death Penalty Info Center executions][] 
-* [Stanford Open Policing Project][] - Download the San Diego data, which has a reasonable amount of rows (~300K) and data attributes available
+* [Stanford Open Policing Project][] - Download the data from Stockton (CA), which has a reasonable amount of rows and data attributes available
 
 [Stanford Open Policing Project]: https://openpolicing.stanford.edu/data/
 [Campaign Finance data]: https://www.fec.gov/data/candidates/president/?election_year=2020&cycle=2020&election_full=true
