--- a/bna/2019/day/17.md
+++ b/bna/2019/day/17.md
@@ -64,7 +64,7 @@ Before we dive into the guts of D3, let's do some preliminary setup.
   </html>
   ```
 * Download and unpack a nicely formatted [version of the source code][]:
-* In a new shool, navigate to the new directory and fire up a test
+* In a new shell, navigate to the new directory and fire up a test
 server: `python -m http.server`
 * Use Firefox (or Chrome) to load the file at `http://localhost:8000/`
 
