Fix d3 source link in day 17 notes

--- a/bna/2019/day/17.md
+++ b/bna/2019/day/17.md
@@ -63,7 +63,8 @@ Before we dive into the guts of D3, let's do some preliminary setup.
     </body>
   </html>
   ```
-* Download and unpack a nicely formatted [version of the source code][]:
+* Download a nicely formatted [version of the source code][]. Be sure to
+save it as `d3.v5.js` in `d3-under-the-hood/`
 * In a new shell, navigate to the new directory and fire up a test
 server: `python -m http.server`
 * Use Firefox (or Chrome) to load the file at `http://localhost:8000/`
@@ -73,7 +74,7 @@ server: `python -m http.server`
 > properties). It can be helpful to use both when using a debugger to
 > explore code..
 
-[version of the source code]: https://github.com/d3/d3/releases/tag/v5.9.2
+[version of the source code]: https://d3js.org/d3.v5.js
 
 ## Data Joins
 
