Move img/ dir to src/static/ and update URL references

--- a/src/bna/2019/day/10.md
+++ b/src/bna/2019/day/10.md
@@ -14,7 +14,7 @@ We'll review solutions to the [quakebot assignment](https://github.com/zstumgore
 
 ## The Coding Cockpit
 
-![cockpit](/img/nasa-cockpit.jpg)
+![cockpit](/static/img/nasa-cockpit.jpg)
 
 To the untrained eye, a cockpit dashboard is a nonsensical array of guages and dials. To a pilot, the dashboard is a vital window into the surrounding environment and status of a hurtling tube of metal.
 
