Add another link to day 1

--- a/src/bna/2020/day/1.md
+++ b/src/bna/2020/day/1.md
@@ -25,6 +25,8 @@ The Stanford Daily has been tracking [Bay Area cases](https://www.stanforddaily.
 Stanford students have worked with the [BigLocal News](https://biglocalnews.org/) project, which has been coordinating data gathering collaborations on a variety of COVID data, to create a [map
 of locations offering free lunches](https://www.mercurynews.com/2020/03/20/map-where-in-the-bay-area-to-get-free-school-lunches-during-coronavirus-closures/) during school closures.
 
+Here's a [zoomable time-lapse map on COVID case counts](https://covid19map.us/) by a recent Stanford alumnus, Dylan Freedman. Note that you can view the source code for this project on GitHub.
+
 Students, journalists and many others are working from the confines of their homes to produce information-rich storytelling experiences to keep the public informed during the pandemic. Here's one final example from the New York Times that blends traditional reporting -- interviews and storytelling -- in a multimedia format that includes a variety of data visualizations and information graphics.
 
 <iframe title="New York Times Video - Embed Player" width="480" height="321" frameborder="0" scrolling="no" allowfullscreen="true" marginheight="0" marginwidth="0" id="nyt_video_player" src="https://www.nytimes.com/video/players/offsite/index.html?videoId=100000007056651"></iframe>
@@ -70,3 +72,20 @@ Here are a few other suggestions and rules of the road for our course:
 - *Collaborate.* We all bring different experiences and perspectives to our work. Share your experience and perspective and listen to the contributions of others as we tackle assignments and projects.
 - *Prepare.* In order to collaborate with teammates and make a meaningful contribution on the class project, you must keep pace with your own learning goals. If you fall behind or get stuck, reach out for help!
 - *Perspirate.* As with most things worth learning, programming takes work. Invest real time on assignments, follow your curiosity and challenge yourself to apply newfound skills in and out of class.
+
+## Assignment 1
+
+**Favorite news app**
+
+Choose two of your favorite examples of news applications, tools, or interactive graphics. **Try to select something that you would be interested in learning how to build yourself.**
+
+If you're hard pressed to find examples, review the projects cited above and/or the [Sigma Awardees][] list, focusing especially on the News Apps and Visualization categories.
+
+[Sigma Awardees]: https://datajournalism.com/awards
+
+Don't just read the award write-up, but check out the related app/tool and stories to get a real feel for the app or visualization.  Be prepared to present your favorite next class and to discuss the following questions:
+
+* What particular features did you like most about the project? Why?
+* What could be improved or done differently about the project?
+
+> If you are unble to make next class, please write (no more than) 500 words on the above and email me.
