--- a/src/bna/2020/day/1.md
+++ b/src/bna/2020/day/1.md
@@ -77,7 +77,7 @@ Here are a few other suggestions and rules of the road for our course:
 
 **Favorite news app**
 
-Choose two of your favorite examples of news applications, tools, or interactive graphics. **Try to select something that you would be interested in learning how to build yourself.**
+Choose two of your favorite examples of news applications, tools, or interactive graphics. **Try to select something that you would be interested in learning how to build yourself.** Try to select something that you personally find informative, engaging *and* even exciting.
 
 If you're hard pressed to find examples, review the projects cited above and/or the [Sigma Awardees][] list, focusing especially on the News Apps and Visualization categories.
 
