--- a/src/bna/2020/day/3.md
+++ b/src/bna/2020/day/3.md
@@ -8,6 +8,7 @@ tags:
   - classnotes2020
 ---
 
+
 ## Team presentation
 
 Today, each team will present their project beats, user stories and initial ideas for software. This is an opportunity to refine ideas and user stories based on feedback from classmates. In addition, it's a chance for you to begin articulating the role each team member will play on the project.
@@ -17,6 +18,29 @@ Each team should choose present on the following:
 * Project beat(s)
 * User stories
 * General software ideas to address the needs identified in user stories
+* What role each team member plans to play
+
+## A brief aside on roles
+
+There are many specialties in the world of programming and data work. A "full-stack developer" is a rare thing, since it implies professional-level mastery of a wide range of skills:
+
+* Server-side language(s) such as Python and/or NodeJs
+* Data acquisition and analysis using a programming language
+* API usage and creation
+* Datastores such as relational databases and NoSQL data stores
+* Cloud infrastructure such as Amazon Web Services
+* The ability to design *and* implement "front-end" code (HTML/CSS/JS) and engaging user experiences
+
+Front-end work alone entails a head-spinning number of skills, as detailed in the [Front End Developer Handbook 2019][], which takes a skeptical view of the ["mythical" full-stack developer][].
+
+[Front End Developer Handbook 2019]: https://frontendmasters.com/books/front-end-handbook/2019/
+["mythical" full-stack developer]: https://frontendmasters.com/books/front-end-handbook/2019/#3.7
+
+## Areas of growth and mastery
+
+This is not to discourage you from trying to learn many different skills. However, be pragmatic in how much you try to *master* at once. A good approach is to choose an area of growth and area of mastery. For example, let's say you have some basic Python programming skills and some basic HTML and CSS. An area of growth for you could be to begin learning Javascript to create dynamic web pages (e.g. dropdown menus and dynamic page elements that require calling out to APIs). Meanwhile, as an area of mastery, you may deepen your skills using Python to acquire data through web scraping and/or the use of APIs.
+
+As you think about your SMART goals, try to identify roles or tasks that will allow you to grow new skills and deepen existing skills *while working toward your team goals*.
 
 ## SMART Goals
 
@@ -28,9 +52,9 @@ Let's start pinning down some specific project "deliverables" by creating indivi
 
 Remember that SMART goals are:
 
-* **S**pecific - This is your mission statement, and should reflect your contribution to the overall team project.
+* **S**pecific - This is your mission statement, and should reflect your contribution to the overall team project and your personal learning interests.
 * **M**easurable - Provide a quantifiable way to measure if the goal has been reached.
-* **A**chievable - Be ambitious but pragmatic.
+* **A**chievable - Be ambitious but realistic. Create a stretch goal that will motivate you, but is not so difficult or complex that you feel overwhelmed. Sometimes it's difficult to know where to set the mark. Don't stress -- we'll take time throughout the quarter to reflect and adjust our goals.
 * **R**elevant - Your goal should be aligned with both your own learning interests as well as your team's objectives (i.e. the beat and user stories you've defined).
 * **T**ime-bound - You'll need a cut-off date for the goal (by the last week of class at the latest).
 
@@ -54,7 +78,9 @@ With our SMART goals defined, we're ready to start fleshing out an individualize
 * For each skill, identify specific resources to help you learn it
 * Craft a daily/weekly plan of study for working through the resources
 
-We'll use GitHub project management tools to flesh out and track our action items in a similar fashion to how we're using it to manage our team effort.
+### GitHubify your action plan
+
+We'll use [GitHub project management boards](https://help.github.com/en/github/managing-your-work-on-github/managing-project-boards) and [issues](https://help.github.com/en/github/managing-your-work-on-github/managing-your-work-with-issues) to flesh out and track our action items in a similar fashion to how we're using it to manage our team's tasks.
 
 * Create a new **private** GitHub project on your personal account
 * Create a `README.md` containing your SMART Goal(s)
