Add comic to day 5 bna notes

--- a/src/bna/2020/day/5.md
+++ b/src/bna/2020/day/5.md
@@ -8,6 +8,10 @@ tags:
   - classnotes2020
 ---
 
+![kanban joke from geek and poke](/static/img/kanban_joke.jpg)
+
+> A bit of agile humor courtesy of [Geek & Poke](http://geek-and-poke.com/geekandpoke/2012/10/1/doad.html)  ([CC 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode)).
+
 The [daily stand-up meeting](https://en.wikipedia.org/wiki/Stand-up_meeting) is used in agile software for brief status check-ins among members of a development team. Participants are expected to speak briefly (no more than 1-2 minutes) and the overall meeting should last no longer than 15 minutes. Standing is important -- even when working remotely -- as a reminder that the meeting should be short. The goal is for teammates to quickly share updates on progress since the last meeting, and to highlight any potential development challenges.
 
 These team member updates should reflect the status of work for the current "sprint" -- i.e. the action items that you've planned out on your GitHub planning board. Some teams hold a separate sprint review meeting where they update the board (creating new tickets, updating existing tickets, closing tickets). But in general, you should strive to update your tickets *before* arriving in stand-up, so that they reflect the current state of affairs.
