--- a/src/bna/2020/day/19.md
+++ b/src/bna/2020/day/19.md
@@ -23,5 +23,5 @@ project?
 
 ## Course retrospective
 
-We'll wrap up by reflecting on what you all have accomplished this quarter,
+We'll wrap up by reflecting on what you all have accomplished this quarter
 and share ideas for improving the course.
