Add day class notes and updates to assignments 1 and 2

--- a/src/bna/2022/assignments/1.md
+++ b/src/bna/2022/assignments/1.md
@@ -8,9 +8,19 @@ tags:
 
 ---
 
-## Read up on news apps
+## Overview
 
-Read [News Apps Overview](../../topics/news_apps_overview/)
+This assignment has three parts:
+
+* Read a bit about news apps, with a focus on the COVID era
+* Find your favorite news app and prepare to tell us about it at our next class. *See below for more details.*
+* Read [Project Beats and User Stories](../../topics/beats_and_user_stories/) and start identifying a beat (or two) and possible project ideas. You'll also present these ideas at next class. *See below for more details.*
+
+
+## Read up on news apps and project beats
+
+- [News Apps Overview](../../topics/news_apps_overview/)
+
 
 ## Find a favorite news app
 
@@ -28,4 +38,16 @@ Don't just read the award write-ups. Check out the related app/tool and stories 
 * What could be improved or done differently about the project?
 
 > If you are unable to make next class, please write a short 500-word memo on the above and email me.
+
+##  Project Beat and User stories
+
+Read [Project Beats and User stories](../../topics/beats_and_user_stories/) and identify one or two project beats (a primary and secondary "fallback" beat). In addition, you should start brainstorming potential project ideas for both of these beats.
+
+At this point, it's normal for your project ideas to be very general in nature. For example, if "COVID Disinformation and Vaccine Policies" is your beat, one possible project idea on that beat could be "a website that helps users explore social media activity around misleading information on vaccine policies in the COVID era."
+
+Each team will present their initial beat and potential project ideas at our next class. This is very informal and intended to be the first of many check-ins on project goals and trajectory.
+
+Lastly, by next class, you should be familiar with the concept of a *user story* and how to use the `As role...` methodology to sketch out initial feature ideas for your news apps or graphics. After teams present their beat and initial project idea(s) next class, we'll spend some time fleshing out software features using this methodology.
+
+
 
