--- a/src/bna/2022/assignments/2.md
+++ b/src/bna/2022/assignments/2.md
@@ -44,12 +44,13 @@ Flesh out this document so that it has the following sections:
 
 > At our next class, each group will present and discuss their beat, user stories and software ideas.
 
-### Level up on SMART Goals
+## Craft your SMART Goal
 
-We'll craft SMART Goals next week that help align individual technical learning with the goals of each team project.
+Review the below resources on SMART Goals, which we'll use to craft individualized plans for technical learning that align with our team goals.
 
-There are a ton of materials online about SMART Goals, but here are two that provide a decent overview. Please watch and read before arriving in class:
-
+* [A SMART Roadmap](topics/smart_roadmap/#smart-goals)
 * Charles Duhigg [video overview](https://www.youtube.com/watch?v=XpSOb5q1cRo) of SMART Goals
 * [SMART Goals: How to Make Your Goals Achievable](https://www.mindtools.com/pages/article/smart-goals.htm)
+
+After reviewing the above, craft a SMART Goal for yourself and be prepared to present it at our next class.
 
