Update Day 2 notes and assign 2

--- a/src/bna/2022/assignments/2.md
+++ b/src/bna/2022/assignments/2.md
@@ -44,13 +44,22 @@ Flesh out this document so that it has the following sections:
 
 > At our next class, each group will present and discuss their beat, user stories and software ideas.
 
-## Craft your SMART Goal
+## Craft your SMART Roadmap
 
 Review the below resources on SMART Goals, which we'll use to craft individualized plans for technical learning that align with our team goals.
 
-* [A SMART Roadmap](topics/smart_roadmap/#smart-goals)
+* [A SMART Roadmap](../../topics/smart_roadmap/#smart-goals)
 * Charles Duhigg [video overview](https://www.youtube.com/watch?v=XpSOb5q1cRo) of SMART Goals
 * [SMART Goals: How to Make Your Goals Achievable](https://www.mindtools.com/pages/article/smart-goals.htm)
 
-After reviewing the above, craft a SMART Goal for yourself and be prepared to present it at our next class.
+After reviewing the above, craft a SMART Goal for yourself.
+
+Next, flesh out a 10-week plan of study based on this [SMART learning plan template][]. The objective is to sketch out a concrete plan of action in terms of the learning resources you plan to study.
+
+It's a good idea to interleave some hands-on "milestone" projects along the way that force you to apply the skills you're learning. This helps ensure you're learning actively rather than passively.
+
+Finally, keep in mind that this roadmap is *malleable*. We'll revisit the roadmap many times throughout the quarter and to ensure it aligns with your pace of learning and the broader goals of your team.
+
+[SMART learning plan template]: https://docs.google.com/document/d/1zLyYArTK_WpGEqpXpWXMZhdTOJjtHR9f-xvWhcs9uE8/edit?usp=sharing
+
 
