--- a/src/bna/2022/assignments/2.md
+++ b/src/bna/2022/assignments/2.md
@@ -58,7 +58,7 @@ Next, flesh out a 10-week plan of study based on this [SMART learning plan templ
 
 It's a good idea to interleave some hands-on "milestone" projects along the way that force you to apply the skills you're learning. This helps ensure you're learning actively rather than passively.
 
-Finally, keep in mind that this roadmap is *malleable*. We'll revisit the roadmap many times throughout the quarter and to ensure it aligns with your pace of learning and the broader goals of your team.
+Finally, keep in mind that this roadmap is *malleable*. We'll revisit the roadmap many times throughout the quarter to ensure it aligns with your pace of learning and the broader goals of your team.
 
 [SMART learning plan template]: https://docs.google.com/document/d/1zLyYArTK_WpGEqpXpWXMZhdTOJjtHR9f-xvWhcs9uE8/edit?usp=sharing
 
