Day 3 note tweaks

--- a/src/bna/2022/day/3.md
+++ b/src/bna/2022/day/3.md
@@ -13,7 +13,7 @@ tags:
 
 Today, each team will present their project beats, user stories and initial ideas for software. This is an opportunity to refine ideas and user stories based on feedback from classmates. In addition, it's a chance for you to begin articulating the role each team member will play on the project.
 
-Each team should choose present on the following:
+Each team should present on the following:
 
 * Project beat(s)
 * User stories
@@ -25,5 +25,5 @@ Each team should choose present on the following:
 We'll also present the first draft of our [Smart Roadmaps](../../topics/smart_roadmap/). Here again, this is a chance to
 get some initial feedback and lay out a concrete plan of study for the next few weeks, one that challenges you to learn new skills while contributing to your team's broader goals.
 
-Once we have a solid plan laid, we'll flesh out the first weekly "learning" sprint on the Project Board, as detailed above in [GitHubify your Action Plan](../../topics/smart_roadmap/#githubify-your-action-plan).
+Once we have a solid plan, we'll flesh out our first weekly "learning" sprint on the team Project Board, as detailed above in [GitHubify your Action Plan](../../topics/smart_roadmap/#githubify-your-action-plan).
 
