--- a/src/bna/2022/day/4.md
+++ b/src/bna/2022/day/4.md
@@ -11,7 +11,7 @@ tags:
 
 ## How to Learn Coding
 
-With our [Smart Roadmaps](../../topics/smart_roadmap/) fleshed out, let's spend a few minutes reviewing *how* to approach our individual technical learning. We'll discuss your own ideas -- what's worked well and not so well in the past -- and talk through [10 Tips for Learning Code](../../topics/ten_tips_for_learning_code/)
+With our [Smart Roadmaps](../../topics/smart_roadmap/) fleshed out, let's spend a few minutes reviewing *how* to approach our individual technical learning. We'll discuss your own ideas -- what's worked well and not so well in the past -- and talk through [10 Tips for Learning Code](../../topics/ten_tips_for_learning_code/).
 
 
 ## Git Overview and Basics
@@ -22,5 +22,5 @@ But this tool can be tricky to learn. Today we'll get a big picture sense of why
 
 Then we'll dive into the basics of git syntax to set the stage for an assignment designed to help you build a solid grasp of this technology.
 
-* [Team Collaboration with Git](../../topics/team_collab_with_git.md)
+* [Team Collaboration with Git](../../topics/team_collab_with_git/)
 * [Assignment 3 - Version Control with Git](../../assignments/3/)
