Tweak Day 5 notes

--- a/src/bna/2022/day/5.md
+++ b/src/bna/2022/day/5.md
@@ -13,7 +13,7 @@ tags:
 
 Today we'll take some time to review any questions from [Assignment 3 - Version Control with Git](../../assignments/3/).
 
-We'll then wrap up our introduction to [team Collaboration with Git](../../topics/team_collab_with_git/) with Git by diving into branches, merging code, and various snags you'll inevitably encounter when using version control (yes, I mean merge conflicts, among other annoyances).
+We'll then wrap up our introduction to [team Collaboration with Git](../../topics/team_collab_with_git/) by diving into branches, merging code, and various snags you'll inevitably encounter when using version control (yes, I mean merge conflicts, among other annoyances).
 
 
 ## Daily Stand-ups
